# advent-of-code

./: LICENSE
2025/: .gitignore  LICENSE  aoc2025.cabal  cabal.project.freeze
2025/app/: main.hs
2025/src/: Day1.hs  Day1Part1.hs  Day1Part2.hs  Day2Part1.hs  Day2Part2.hs  Shared.hs
2025/tests/: Day1Part1Spec.hs  Day1Part2Spec.hs  Day1Spec.hs  Day2Part1Spec.hs  Day2Part2Spec.hs  Spec.hs
