cabal-version: 3.0

name: aoc2025
version: 0.1.0.0
homepage: https://github.com/SagnikPradhan/advent-of-code
license: MIT
license-file: LICENSE
author: Sagnik Pradhan
maintainer: contact.sagnikpradhan@gmail.com
build-type: Simple
extra-doc-files: CHANGELOG.md

common shared-properties
    ghc-options: -Wall
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
        ViewPatterns

common shared-properties-tests
    import: shared-properties
    ghc-options: -Wall
    build-depends:
        base ^>=4.18.3.0,
        hspec,
        hspec-contrib,
        QuickCheck,
        HUnit,
        aoc2025
    hs-source-dirs: tests app
    default-language: Haskell2010

library
    import: shared-properties
    hs-source-dirs: src
    build-depends:
        base ^>=4.18.3.0,
        text ^>=2.0.2,
        advent-of-code-api ^>=0.2.10,
    exposed-modules:
        Shared
        Day1

executable main
    import: shared-properties
    main-is: main.hs
    hs-source-dirs: app
    build-depends:
        base ^>=4.18.3.0,
        text ^>=2.0.2,
        dotenv ^>=0.12.0.0,
        aoc2025

test-suite tests
    import: shared-properties-tests
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules: Day1Spec

