cabal-version: 3.0

name: aoc2025
version: 0.1.0.0
homepage: https://github.com/SagnikPradhan/advent-of-code
license: MIT
license-file: LICENSE
author: Sagnik Pradhan
maintainer: contact.sagnikpradhan@gmail.com
build-type: Simple

common shared-properties
    ghc-options: -Wall
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
        ViewPatterns

common shared-properties-tests
    import: shared-properties
    ghc-options: -Wall
    build-depends:
        base,
        hspec,
        hspec-contrib,
        QuickCheck,
        HUnit,
        aoc2025
    hs-source-dirs: tests app
    default-language: GHC2024

library
    import: shared-properties
    hs-source-dirs: src
    build-depends:
        base,
        text,
        advent-of-code-api ^>=0.2.10,
    exposed-modules:
        Shared
        Day1Part1
        Day1Part2        

executable main
    import: shared-properties
    main-is: main.hs
    hs-source-dirs: app
    build-depends:
        base,
        text,
        dotenv ^>=0.12.0.0,
        aoc2025

test-suite tests
    import: shared-properties-tests
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules: 
        Day1Part1Spec
        Day1Part2Spec
